fixed some image-align problems

--- a/styles/style.css
+++ b/styles/style.css
@@ -29,22 +29,13 @@ table {
     width: 100%;
 }
 
-table.kantor {
-
-}
-
-.kantor th{
-
-}
-
 div{
     overflow:auto;
 }
 
 table.samochody{
-    display: block;
-    float: right;
-    width: 100%;
+    height: auto;
+    text-align: center;
 }
 
 thead {
@@ -77,7 +68,7 @@ article img{
 
 td img{
     max-height:100%;
-    max-width:100%;
+    max-width:430px;
 }
 
 /* Navbar */
